dark mode fix

--- a/src/simulator/List.css
+++ b/src/simulator/List.css
@@ -37,7 +37,7 @@
 
 .sketch,
 .device {
-  color: var(--text-color) !important;
+  color: var(--text-color);
 }
 
 .device {
@@ -77,7 +77,7 @@
 }
 
 .sketch a {
-  color: #333;
+  color: var(--text-color);
   text-decoration: none;
   flex-grow: 1;
   padding-left: 8px;
