--- a/src/simulator/index.css
+++ b/src/simulator/index.css
@@ -11,6 +11,7 @@
   --border-color: #222;
   --panel-background: #333;
   --heading-color: #999;
+  --text-color: #fefefe;
   --outline-color: rgba(255, 255, 255, 0.2);
   --selected-background: #222;
 }
